--- a/src/components/navbar/index.less
+++ b/src/components/navbar/index.less
@@ -1,7 +1,24 @@
 .component-main_nav_bar {
   display: flex;
   height: 50px;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-self: center;
-  background-color: #aef;
+  background-color: rgb(232, 250, 255);
+
+  .nav-item {
+    // flex: 1;
+    text-align: center;
+    color: #666;
+    font-size: 16px;
+    line-height: 50px;
+    text-decoration: none;
+    width: 100px;
+
+    &.nav-active {
+      color: #fff;
+      // font-size: 20px;
+      background-color: rgb(0, 174, 255);
+      transition: all .1s linear;
+    }
+  }
 }
