--- a/src/components/list/index.less
+++ b/src/components/list/index.less
@@ -10,7 +10,7 @@
 .list-item-wrapper {
   position: absolute;
   left: 0;
-  height: 160px;
+  // height: 160px;
   box-sizing: border-box;
   padding: 10px;
   border-bottom: 1px solid #999;
@@ -26,4 +26,11 @@
     margin: 10px auto;
     display: block;
   }
+}
+
+
+.list-box-scroll {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100vh;
 }
