--- a/src/views/home/index.less
+++ b/src/views/home/index.less
@@ -5,3 +5,37 @@
   text-align: center;
   transition: background .75s linear;
 }
+
+.mixin-line-dashed (@font-size: 1px, @line-width: 6, @color: #999) {
+  font-size: @font-size;
+  height: 1em;
+  background-image: linear-gradient(90deg, @color 0% 50%, transparent 50% 100%);
+  background-repeat: repeat-x;
+  background-size: (@line-width) * 1em 1em;
+}
+
+.line-dashed {
+  .mixin-line-dashed(2px, 5.5);
+}
+
+.line-dotted {
+  .mixin-line-dot(4px)
+}
+
+.line-dotted_dot {
+  .mixin-line-dot(4px)
+}
+
+.line-dotted_rect {
+  .mixin-line-dashed(4px, 2);
+}
+
+.mixin-line-dot (@font-size: 2px, @color: #999) {
+  font-size: @font-size;
+  height: 1em;
+  background-image: radial-gradient(@color 0% 35%, transparent 35% 100%);
+  background-repeat: repeat-x;
+  background-size: 2em 2em;
+  background-position-y: 50%;
+
+}
